--- a/templates/workOrEducation.html
+++ b/templates/workOrEducation.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="/css/output.css">
-        <link rel="stylesheet" href="/css/customStyles.css">
+        <link rel="stylesheet" href="./static/css/output.css">
+        <link rel="stylesheet" href="./static/css/customStyles.css">
         <title>Document</title>
      </head>
      <body class="bg-gray-200">
@@ -14,7 +14,7 @@
             <div class="w-full max-w-4xl">
 
                 <div class="w-full max-w-4xl flex justify-start items-start pb-5">
-                    <img src="/assets/img/svg/logo.svg" alt="">
+                    <img src="./static/assets/img/svg/logo.svg" alt="">
                 </div>
                 <!-- Card Selection Section -->
                 <div class="bg-white p-8 shadow-md">
@@ -22,20 +22,20 @@
                     <div class="flex justify-end mt-6">
                         <div class="border-2 border-customBlack rounded-full py-1 px-2 flex items-center">
                             <button onclick="window.location.href='previousPage.html'">
-                                <img src="/assets/img/png/prev.png" alt="">
+                                <img src="./static/assets/img/png/prev.png" alt="">
                             </button>
                             
                             <!-- Separator -->
                             <div class="w-1 h-8 bg-customBlack mx-2"></div>
                             
                             <button onclick="window.location.href='confirmStyle.html'">
-                                <img src="/assets/img/png/next.png" alt="">
+                                <img src="./static/assets/img/png/next.png" alt="">
                             </button>
                         </div>
                     </div>
 
                     <div class="absolute right-28 top-72">
-                        <img src="/assets/img/png/janna-full.png" alt="">
+                        <img src="./static/assets/img/png/janna-full.png" alt="">
                     </div>
 
                 </div>
