--- a/templates/auth.html
+++ b/templates/auth.html
@@ -3,11 +3,11 @@
    <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <link rel="stylesheet" href="./static/css/output.css">
-      <link rel="stylesheet" href="./static/css/customStyles.css">
+      <link rel="stylesheet" href="/css/output.css">
+      <link rel="stylesheet" href="/css/customStyles.css">
       <title>Document</title>
    </head>
-   <body class="bg-gray-200">
+   <body class="bg-customWhite">
       <!-- Main Content -->
       <main class="flex items-center justify-center h-screen">
          <!-- Login Section -->
@@ -26,22 +26,25 @@
                      <input type="password" name="password" id="password" placeholder="Password" class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-customGreen">
                   </div>
                   <div class="text-center">
-                     <a href="#" class="text-sm text-customGreen">Забыли пароль?</a>
+                     <a href="#" class="text-sm text-customBlack">Забыли пароль?</a>
                   </div>
                   <button type="submit" class="w-full px-4 py-2 bg-black text-white font-bold rounded-lg hover:bg-gray-800">ВОЙТИ</button>
                </form>
                <div class="flex items-center my-4">
-                  <hr class="flex-grow border-gray-300">
+                  <hr class="flex-grow border-customGray">
                   <span class="px-4 text-gray-600">или</span>
-                  <hr class="flex-grow border-gray-300">
+                  <hr class="flex-grow border-customGray">
                </div>
-               <a href="/choose_role"><button class="w-full px-4 py-2 bg-white border border-gray-300 text-gray-700 font-bold rounded-lg hover:bg-gray-100">Зарегистрироваться</button></a>
+
+               <a href="category.html">
+                  <button class="w-full px-4 py-2 bg-customWhite border border-gray-300 text-gray-700 font-bold rounded-lg hover:bg-gray-100">Зарегистрироваться</button>
+               </a>
             </div>
             <!-- Assistant Section -->
             <div class="w-full md:w-1/2 flex justify-center">
                <div class="relative">
-                  <img src="./static/assets/img/png/janna-hello.png" alt="Assistant" class="w-48 h-48 object-cover rounded-full">
-                  <div class="absolute top-0 right-0 -mt-12 -mr-4 bg-white p-4 rounded-lg shadow-md">
+                  <img src="/assets/img/png/janna-hello.png" alt="Assistant" class="w-48 h-48 object-cover rounded-full">
+                  <div class="absolute top-0 right-0 -mt-12 -mr-4 bg-customWhite p-4 rounded-lg shadow-md">
                      <p class="text-sm font-bold">Привет!</p>
                      <p class="text-sm">Я Жанна - твой персональный помощник</p>
                   </div>
