--- a/templates/confirmStyle.html
+++ b/templates/confirmStyle.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./static/css/output.css">
-    <link rel="stylesheet" href="./static/css/customStyles.css">
+    <link rel="stylesheet" href="/css/output.css">
+    <link rel="stylesheet" href="/css/customStyles.css">
     <title>Выбор стиля</title>
 </head>
 <body class="bg-gray-200">
@@ -14,11 +14,11 @@
         <div class="w-full max-w-4xl">
             <!-- Logo Section -->
             <div class="flex justify-start items-start pb-5">
-                <img src="./static/assets/img/svg/logo.svg" alt="Логотип">
+                <img src="/assets/img/svg/logo.svg" alt="Логотип">
             </div>
 
             <!-- Question Section -->
-            <div class="bg-white p-8 shadow-md">
+            <div class="bg-customWhite p-8 shadow-md">
                 <div class="space-y-6">
                     <!-- Option 1: Новый стиль -->
                     <div class="bg-gray-100 p-6 rounded-lg shadow-lg hover:shadow-xl transition-shadow duration-300 cursor-pointer">
@@ -39,14 +39,14 @@
                 <div class="flex justify-end mt-10">
                     <div class="border-2 border-customBlack rounded-full py-1 px-2 flex items-center">
                         <button onclick="window.location.href='previousPage.html'">
-                            <img src="./static/assets/img/png/prev.png" alt="">
+                            <img src="/assets/img/png/prev.png" alt="">
                         </button>
                         
                         <!-- Separator -->
                         <div class="w-1 h-8 bg-customBlack mx-2"></div>
                         
                         <button onclick="window.location.href='confirmStyle.html'">
-                            <img src="./static/assets/img/png/next.png" alt="">
+                            <img src="/assets/img/png/next.png" alt="">
                         </button>
                     </div>
                 </div>
@@ -58,7 +58,7 @@
             <div class="w-full h-8 bg-customBlack"></div>
 
             <div class="absolute right-28 top-72">
-                <img src="./static/assets/img/png/janna-full.png" alt="">
+                <img src="/assets/img/png/janna-full.png" alt="">
             </div>
         </div>
     </main>
