--- a/templates/skin2man.html
+++ b/templates/skin2man.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="/css/customStyles.css">
         <title>Document</title>
      </head>
-     <body class="bg-gray-200">
+     <body class="bg-customGray">
         <!-- Main Content -->
         <main class="flex items-center justify-center h-screen">
             <!-- Wrapper for Container and Stripes -->
@@ -17,42 +17,43 @@
                     <img src="/assets/img/svg/logo.svg" alt="">
                 </div>
                 <!-- Card Selection Section -->
-                <div class="bg-white p-8 shadow-md relative">
+                <div class="bg-customWhite p-8 shadow-md relative">
 
+                    <!-- 1 элемент -->
                     <div class="flex justify-center items-center">
                         <img src="/assets/img/png/edick2.png" alt="Логотип" class="max-w-full h-auto">
                     </div>
-
-                    <div class="absolute top-10 right-64">
+                    <!-- 2 элемент -->
+                    <div class="absolute top-10 right-72">
                         <img src="/assets/img/svg/likeWhite.svg" alt="Like" class="checkbox-image" id="likeCheckbox1" onclick="toggleCheckboxImage('likeCheckbox1')">
                     </div>
-
+                    <!-- 3 элемент -->
                     <div class="absolute top-10 left-72">
                         <img src="/assets/img/svg/likeWhite.svg" alt="Like" class="checkbox-image" id="likeCheckbox2" onclick="toggleCheckboxImage('likeCheckbox2')">
                     </div>
-
+                    <!-- 4 элемент -->
                     <div class="absolute top-56 left-72">
                         <img src="/assets/img/svg/likeWhite.svg" alt="Like" class="checkbox-image" id="likeCheckbox3" onclick="toggleCheckboxImage('likeCheckbox3')">
                     </div>
-
+                    <!-- 5 элемент -->
                     <div class="absolute top-52 right-96">
                         <img src="/assets/img/svg/likeWhite.svg" alt="Like" class="checkbox-image" id="likeCheckbox4" onclick="toggleCheckboxImage('likeCheckbox4')">
                     </div>
-
-                    <div class="absolute top-64 right-64">
+                    <!-- 6 элемент -->
+                    <div class="absolute top-72 right-80">
                         <img src="/assets/img/svg/likeWhite.svg" alt="Like" class="checkbox-image" id="likeCheckbox5" onclick="toggleCheckboxImage('likeCheckbox5')">
                     </div>
 
                     <div class="flex justify-end mt-6">
                         <div class="border-2 border-customBlack rounded-full py-1 px-2 flex items-center">
-                            <button onclick="window.location.href='previousPage.html'">
+                            <button onclick="window.location.href='skin1man.html'">
                                 <img src="/assets/img/png/prev.png" alt="">
                             </button>
                             
                             <!-- Separator -->
                             <div class="w-1 h-8 bg-customBlack mx-2"></div>
                             
-                            <button onclick="window.location.href='confirmStyle.html'">
+                            <button onclick="window.location.href='skin3man.html'">
                                 <img src="/assets/img/png/next.png" alt="">
                             </button>
                         </div>
