--- a/static/css/output.css
+++ b/static/css/output.css
@@ -588,6 +588,10 @@ video {
   }
 }
 
+.fixed {
+  position: fixed;
+}
+
 .absolute {
   position: absolute;
 }
@@ -600,8 +604,8 @@ video {
   left: 50%;
 }
 
-.left-60 {
-  left: 15rem;
+.left-56 {
+  left: 14rem;
 }
 
 .left-64 {
@@ -610,10 +614,6 @@ video {
 
 .left-72 {
   left: 18rem;
-}
-
-.left-80 {
-  left: 20rem;
 }
 
 .left-96 {
@@ -630,14 +630,6 @@ video {
 
 .right-28 {
   right: 7rem;
-}
-
-.right-52 {
-  right: 13rem;
-}
-
-.right-60 {
-  right: 15rem;
 }
 
 .right-64 {
@@ -664,36 +656,16 @@ video {
   top: 2.5rem;
 }
 
-.top-14 {
-  top: 3.5rem;
-}
-
-.top-20 {
-  top: 5rem;
-}
-
-.top-24 {
-  top: 6rem;
-}
-
-.top-28 {
-  top: 7rem;
-}
-
 .top-32 {
   top: 8rem;
-}
-
-.top-40 {
-  top: 10rem;
 }
 
 .top-44 {
   top: 11rem;
 }
 
-.top-5 {
-  top: 1.25rem;
+.top-48 {
+  top: 12rem;
 }
 
 .top-52 {
@@ -704,10 +676,6 @@ video {
   top: 14rem;
 }
 
-.top-60 {
-  top: 15rem;
-}
-
 .top-64 {
   top: 16rem;
 }
@@ -716,8 +684,28 @@ video {
   top: 18rem;
 }
 
+.top-80 {
+  top: 20rem;
+}
+
+.right-40 {
+  right: 10rem;
+}
+
+.top-1\/2 {
+  top: 50%;
+}
+
+.left-0 {
+  left: 0px;
+}
+
 .z-50 {
   z-index: 50;
+}
+
+.z-10 {
+  z-index: 10;
 }
 
 .col-span-2 {
@@ -795,6 +783,10 @@ video {
   margin-top: 3rem;
 }
 
+.mt-2 {
+  margin-top: 0.5rem;
+}
+
 .mt-4 {
   margin-top: 1rem;
 }
@@ -815,8 +807,24 @@ video {
   margin-top: 20rem;
 }
 
+.mb-10 {
+  margin-bottom: 2.5rem;
+}
+
+.mb-8 {
+  margin-bottom: 2rem;
+}
+
+.ml-96 {
+  margin-left: 24rem;
+}
+
 .block {
   display: block;
+}
+
+.inline-block {
+  display: inline-block;
 }
 
 .flex {
@@ -829,6 +837,10 @@ video {
 
 .hidden {
   display: none;
+}
+
+.h-24 {
+  height: 6rem;
 }
 
 .h-4 {
@@ -859,6 +871,18 @@ video {
   height: 100vh;
 }
 
+.h-5 {
+  height: 1.25rem;
+}
+
+.h-6 {
+  height: 1.5rem;
+}
+
+.h-\[80vh\] {
+  height: 80vh;
+}
+
 .max-h-64 {
   max-height: 16rem;
 }
@@ -875,12 +899,20 @@ video {
   width: 50%;
 }
 
+.w-24 {
+  width: 6rem;
+}
+
 .w-3\/4 {
   width: 75%;
 }
 
 .w-48 {
   width: 12rem;
+}
+
+.w-60 {
+  width: 15rem;
 }
 
 .w-auto {
@@ -891,12 +923,12 @@ video {
   width: 100%;
 }
 
-.w-64 {
-  width: 16rem;
+.w-5 {
+  width: 1.25rem;
 }
 
-.w-60 {
-  width: 15rem;
+.w-6 {
+  width: 1.5rem;
 }
 
 .max-w-4xl {
@@ -915,12 +947,25 @@ video {
   max-width: 640px;
 }
 
+.max-w-2xl {
+  max-width: 42rem;
+}
+
+.flex-1 {
+  flex: 1 1 0%;
+}
+
 .flex-grow {
   flex-grow: 1;
 }
 
 .-translate-x-1\/2 {
   --tw-translate-x: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.-translate-y-1\/2 {
+  --tw-translate-y: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1000,6 +1045,10 @@ video {
   gap: 2rem;
 }
 
+.gap-10 {
+  gap: 2.5rem;
+}
+
 .space-x-0 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(0px * var(--tw-space-x-reverse));
@@ -1072,6 +1121,10 @@ video {
   border-left-width: 1px;
 }
 
+.border-b {
+  border-bottom-width: 1px;
+}
+
 .border-customBlack {
   --tw-border-opacity: 1;
   border-color: rgb(0 0 0 / var(--tw-border-opacity, 1));
@@ -1080,6 +1133,16 @@ video {
 .border-gray-300 {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity, 1));
+}
+
+.border-white {
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity, 1));
+}
+
+.border-customGray {
+  --tw-border-opacity: 1;
+  border-color: rgb(217 217 217 / var(--tw-border-opacity, 1));
 }
 
 .bg-black {
@@ -1099,7 +1162,7 @@ video {
 
 .bg-customGreen {
   --tw-bg-opacity: 1;
-  background-color: rgb(110 208 28 / var(--tw-bg-opacity, 1));
+  background-color: rgb(145 239 67 / var(--tw-bg-opacity, 1));
 }
 
 .bg-customWhite {
@@ -1137,6 +1200,11 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
 }
 
+.bg-blue-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(37 99 235 / var(--tw-bg-opacity, 1));
+}
+
 .bg-gradient-to-t {
   background-image: linear-gradient(to top, var(--tw-gradient-stops));
 }
@@ -1144,6 +1212,12 @@ video {
 .from-lime-500 {
   --tw-gradient-from: #84cc16 var(--tw-gradient-from-position);
   --tw-gradient-to: rgb(132 204 22 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-customGreen {
+  --tw-gradient-from: #91EF43 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(145 239 67 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
@@ -1226,8 +1300,31 @@ video {
   padding-bottom: 2rem;
 }
 
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
+
+.px-12 {
+  padding-left: 3rem;
+  padding-right: 3rem;
+}
+
+.py-20 {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+}
+
 .pb-5 {
   padding-bottom: 1.25rem;
+}
+
+.pl-4 {
+  padding-left: 1rem;
+}
+
+.pr-10 {
+  padding-right: 2.5rem;
 }
 
 .text-center {
@@ -1291,6 +1388,16 @@ video {
   line-height: 1.75rem;
 }
 
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
+.text-8xl {
+  font-size: 6rem;
+  line-height: 1;
+}
+
 .font-bold {
   font-weight: 700;
 }
@@ -1305,6 +1412,10 @@ video {
 
 .font-semibold {
   font-weight: 600;
+}
+
+.font-black {
+  font-weight: 900;
 }
 
 .leading-8 {
@@ -1327,7 +1438,7 @@ video {
 
 .text-customGreen {
   --tw-text-opacity: 1;
-  color: rgb(110 208 28 / var(--tw-text-opacity, 1));
+  color: rgb(145 239 67 / var(--tw-text-opacity, 1));
 }
 
 .text-customWhite {
@@ -1400,6 +1511,12 @@ video {
   transition-duration: 150ms;
 }
 
+.transition-all {
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
 .duration-300 {
   transition-duration: 300ms;
 }
@@ -1460,9 +1577,28 @@ video {
   background-color: rgb(132 204 22 / var(--tw-bg-opacity, 1));
 }
 
+.hover\:bg-blue-700:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(29 78 216 / var(--tw-bg-opacity, 1));
+}
+
+.hover\:bg-black:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity, 1));
+}
+
+.hover\:bg-opacity-90:hover {
+  --tw-bg-opacity: 0.9;
+}
+
 .hover\:text-lime-500:hover {
   --tw-text-opacity: 1;
   color: rgb(132 204 22 / var(--tw-text-opacity, 1));
+}
+
+.hover\:text-customGreen:hover {
+  --tw-text-opacity: 1;
+  color: rgb(145 239 67 / var(--tw-text-opacity, 1));
 }
 
 .hover\:shadow-xl:hover {
@@ -1499,7 +1635,7 @@ video {
 
 .focus\:ring-customGreen:focus {
   --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(110 208 28 / var(--tw-ring-opacity, 1));
+  --tw-ring-color: rgb(145 239 67 / var(--tw-ring-opacity, 1));
 }
 
 .peer:checked ~ .peer-checked\:bg-black {
