--- a/templates/chooseStyle.html
+++ b/templates/chooseStyle.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="./static/css/output.css">
-        <link rel="stylesheet" href="./static/css/customStyles.css">
+        <link rel="stylesheet" href="/css/output.css">
+        <link rel="stylesheet" href="/css/customStyles.css">
         <title>Выбор пола</title>
      </head>
      <body class="bg-customGray flex flex-col items-center justify-center h-screen">
@@ -13,26 +13,26 @@
             <!-- Card Selection Section -->
             <div class="bg-customWhite p-8 shadow-md">
                 <div class="flex justify-start items-start pb-5">
-                    <img src="./static/assets/img/svg/logo.svg" alt="">
+                    <img src="/assets/img/svg/logo.svg" alt="">
                 </div>
                 
                 <h2 class="text-2xl font-bold mb-6 text-center">Выберите стиль</h2>
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
                     <!-- Карточка Casual -->
                     <div class="bg-gray-100 p-6 rounded-lg shadow-lg hover:shadow-xl transition-shadow duration-300 cursor-pointer">
-                        <img src="./static/assets/img/png/Casual.png" alt="Casual" class="w-full h-64 object-cover rounded-lg mb-4">
+                        <img src="/assets/img/png/Casual.png" alt="Casual" class="w-full h-64 object-cover rounded-lg mb-4">
                         <h3 class="text-xl font-semibold text-gray-700 text-center">Casual</h3>
                     </div>
     
                     <!-- Карточка Спортивный стиль -->
                     <div class="bg-gray-100 p-6 rounded-lg shadow-lg hover:shadow-xl transition-shadow duration-300 cursor-pointer">
-                        <img src="./static/assets/img/png/Sport.png" alt="Спортивный стиль" class="w-full h-64 object-cover rounded-lg mb-4">
+                        <img src="/assets/img/png/Sport.png" alt="Спортивный стиль" class="w-full h-64 object-cover rounded-lg mb-4">
                         <h3 class="text-xl font-semibold text-gray-700 text-center">Спортивный стиль</h3>
                     </div>
     
                     <!-- Карточка Business casual -->
                     <div class="bg-gray-100 p-6 rounded-lg shadow-lg hover:shadow-xl transition-shadow duration-300 cursor-pointer">
-                        <img src="./static/assets/img/png/Business.png" alt="Business casual" class="w-full h-64 object-cover rounded-lg mb-4">
+                        <img src="/assets/img/png/Business.png" alt="Business casual" class="w-full h-64 object-cover rounded-lg mb-4">
                         <h3 class="text-xl font-semibold text-gray-700 text-center">Business casual</h3>
                     </div>
                 </div>
@@ -43,14 +43,14 @@
                     <div class="border-2 border-customBlack rounded-full py-1 px-2 flex items-center">
 
                         <button onclick="window.location.href='previousPage.html'">
-                            <img src="./static/assets/img/png/prev.png" alt="">
+                            <img src="/assets/img/png/prev.png" alt="">
                         </button>
                         
                         <!-- Separator -->
                         <div class="w-1 h-8 bg-customBlack mx-2"></div>
                         
                         <button onclick="window.location.href='confirmStyle.html'">
-                            <img src="./static/assets/img/png/next.png" alt="">
+                            <img src="/assets/img/png/next.png" alt="">
                         </button>
 
                     </div>
@@ -66,7 +66,7 @@
         </div>
 
         <div class="absolute right-28">
-            <img src="./static/assets/img/png/janna-full.png" alt="">
+            <img src="/assets/img/png/janna-full.png" alt="">
         </div>
 
     </body>
