--- a/templates/figureType.html
+++ b/templates/figureType.html
@@ -20,7 +20,7 @@
         <div class="w-full max-w-4xl border border-customBlack">
 
             <!-- Main Container -->
-            <div class="bg-white p-8 shadow-md">
+            <div class="bg-customWhite p-8 shadow-md">
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                     <!-- First Column with Custom Checkboxes -->
                     <div>
