--- a/templates/registration.html
+++ b/templates/registration.html
@@ -3,8 +3,8 @@
    <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <link rel="stylesheet" href="./static/css/output.css">
-      <link rel="stylesheet" href="./static/css/customStyles.css">
+      <link rel="stylesheet" href="/css/output.css">
+      <link rel="stylesheet" href="/css/customStyles.css">
       <title>Document</title>
    </head>
    <body class="bg-customGray flex justify-center items-center min-h-screen">
@@ -12,10 +12,10 @@
       <div class="w-full max-w-6xl bg-customGray">
          <!-- Верхняя часть -->
          <div class="flex justify-between items-start pb-5">
-            <img src="./static/assets/img/svg/logo.svg" alt="">
+            <img src="/assets/img/svg/logo.svg" alt="">
          </div>
          <!-- Основной контент -->
-         <div class="flex flex-wrap justify-between bg-white p-8 shadow-lg">
+         <div class="flex flex-wrap justify-between bg-customWhite p-8 shadow-lg">
             <form action="" method="post">
 
                <div class="container mx-auto flex flex-wrap md:flex-nowrap p-4">
