--- a/templates/registrationStilist.html
+++ b/templates/registrationStilist.html
@@ -3,8 +3,8 @@
    <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <link rel="stylesheet" href="/static/css/output.css">
-      <link rel="stylesheet" href="/static/css/customStyles.css">
+      <link rel="stylesheet" href="/css/output.css">
+      <link rel="stylesheet" href="/css/customStyles.css">
       <title>Document</title>
    </head>
    <body class="bg-customGray flex justify-center items-center min-h-screen">
@@ -12,14 +12,14 @@
       <div class="w-full max-w-6xl bg-customGray overflow-hidden">
          <!-- Верхняя часть -->
          <div class="flex justify-between items-start pb-5">
-            <img src="/static/assets/img/svg/logo.svg" alt="">
+            <img src="/assets/img/svg/logo.svg" alt="">
          </div>
          <!-- Контент -->
-         <div class="flex flex-wrap bg-white p-8 shadow-lg">
+         <div class="flex flex-wrap bg-customWhite p-8 shadow-lg">
             <!-- Левая часть с регистрацией -->
             <div class="w-full md:w-1/2 p-4">
                <h2 class="text-3xl font-bold mb-6">Регистрация стилиста</h2>
-               <form method="post">
+               <form>
                   <!-- Имя -->
                   <div class="mb-4">
                      <label for="name" class="block text-gray-700 mb-2">Имя</label>
@@ -74,7 +74,7 @@
     <!-- Иконка или изображение -->
     <div class="mt-4 text-center">
       <p class="mt-4 text-customBlack font-semibold bg-customGray py-2 px-4 rounded-lg">Готовы начать вашу карьеру стилиста?</p>
-      <img src="/static/assets/img/png/janna-hello.png" alt="Иконка стилиста" class=" w-auto h-auto mx-auto rounded-full">
+      <img src="/assets/img/png/janna-hello.png" alt="Иконка стилиста" class=" w-auto h-auto mx-auto rounded-full">
     </div>
     
   </div>
