--- a/templates/skin1man.html
+++ b/templates/skin1man.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="/css/customStyles.css">
         <title>Document</title>
      </head>
-     <body class="bg-gray-200">
+     <body class="bg-customGray">
         <!-- Main Content -->
         <main class="flex items-center justify-center h-screen">
             <!-- Wrapper for Container and Stripes -->
@@ -17,17 +17,17 @@
                     <img src="/assets/img/svg/logo.svg" alt="">
                 </div>
                 <!-- Card Selection Section -->
-                <div class="bg-white p-8 shadow-md relative">
+                <div class="bg-customWhite p-8 shadow-md relative">
 
                     <div class="flex justify-center items-center">
                         <img src="/assets/img/png/edick1.png" alt="Логотип" class="max-w-full h-auto">
                     </div>
 
-                    <div class="absolute top-10 right-64">
+                    <div class="absolute top-80 right-96">
                         <img src="/assets/img/svg/likeWhite.svg" alt="Like" class="checkbox-image" id="likeCheckbox1" onclick="toggleCheckboxImage('likeCheckbox1')">
                     </div>
 
-                    <div class="absolute top-10 left-72">
+                    <div class="absolute top-10 left-64">
                         <img src="/assets/img/svg/likeWhite.svg" alt="Like" class="checkbox-image" id="likeCheckbox2" onclick="toggleCheckboxImage('likeCheckbox2')">
                     </div>
 
@@ -39,8 +39,16 @@
                         <img src="/assets/img/svg/likeWhite.svg" alt="Like" class="checkbox-image" id="likeCheckbox4" onclick="toggleCheckboxImage('likeCheckbox4')">
                     </div>
 
-                    <div class="absolute top-64 right-64">
+                    <div class="absolute top-52 right-96">
                         <img src="/assets/img/svg/likeWhite.svg" alt="Like" class="checkbox-image" id="likeCheckbox5" onclick="toggleCheckboxImage('likeCheckbox5')">
+                    </div>
+
+                    <div class="absolute top-44 right-72">
+                        <img src="/assets/img/svg/likeWhite.svg" alt="Like" class="checkbox-image" id="likeCheckbox6" onclick="toggleCheckboxImage('likeCheckbox6')">
+                    </div>
+
+                    <div class="absolute top-72 right-64">
+                        <img src="/assets/img/svg/likeWhite.svg" alt="Like" class="checkbox-image" id="likeCheckbox7" onclick="toggleCheckboxImage('likeCheckbox7')">
                     </div>
 
                     <div class="flex justify-end mt-6">
@@ -52,7 +60,7 @@
                             <!-- Separator -->
                             <div class="w-1 h-8 bg-customBlack mx-2"></div>
                             
-                            <button onclick="window.location.href='confirmStyle.html'">
+                            <button onclick="window.location.href='skin2man.html'">
                                 <img src="/assets/img/png/next.png" alt="">
                             </button>
                         </div>
