--- a/templates/skin3.html
+++ b/templates/skin3.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="/css/customStyles.css">
         <title>Document</title>
      </head>
-     <body class="bg-gray-200">
+     <body class="bg-customGray">
         <!-- Main Content -->
         <main class="flex items-center justify-center h-screen">
             <!-- Wrapper for Container and Stripes -->
@@ -17,30 +17,35 @@
                     <img src="/assets/img/svg/logo.svg" alt="">
                 </div>
                 <!-- Card Selection Section -->
-                <div class="bg-white p-8 shadow-md relative">
+                <div class="bg-customWhite p-8 shadow-md relative">
 
                     <div class="flex justify-center items-center">
                         <img src="/assets/img/png/skin3.png" alt="Логотип" class="max-w-full h-auto">
                     </div>
 
-                    <div class="absolute top-28 left-72">
+                    <div class="absolute top-10 right-64">
                         <img src="/assets/img/svg/likeWhite.svg" alt="Like" class="checkbox-image" id="likeCheckbox1" onclick="toggleCheckboxImage('likeCheckbox1')">
+                        <input type="hidden" id="likeCheckboxState1" name="likeCheckboxState1" value="false">
                     </div>
 
-                    <div class="absolute top-5 right-96">
+                    <div class="absolute top-10 left-72">
                         <img src="/assets/img/svg/likeWhite.svg" alt="Like" class="checkbox-image" id="likeCheckbox2" onclick="toggleCheckboxImage('likeCheckbox2')">
+                        <input type="hidden" id="likeCheckboxState2" name="likeCheckboxState2" value="false">
                     </div>
 
-                    <div class="absolute top-24 right-72">
+                    <div class="absolute top-72 left-72">
                         <img src="/assets/img/svg/likeWhite.svg" alt="Like" class="checkbox-image" id="likeCheckbox3" onclick="toggleCheckboxImage('likeCheckbox3')">
+                        <input type="hidden" id="likeCheckboxState3" name="likeCheckboxState3" value="false">
                     </div>
 
-                    <div class="absolute top-60 right-72">
+                    <div class="absolute top-52 right-96">
                         <img src="/assets/img/svg/likeWhite.svg" alt="Like" class="checkbox-image" id="likeCheckbox4" onclick="toggleCheckboxImage('likeCheckbox4')">
+                        <input type="hidden" id="likeCheckboxState4" name="likeCheckboxState4" value="false">
                     </div>
 
-                    <div class="absolute top-56 right-96">
-                        <img src="/assets/img/svg/likeWhite.svg" alt="Like" class="checkbox-image" id="likeCheckbox4" onclick="toggleCheckboxImage('likeCheckbox5')">
+                    <div class="absolute top-72 right-64">
+                        <img src="/assets/img/svg/likeWhite.svg" alt="Like" class="checkbox-image" id="likeCheckbox5" onclick="toggleCheckboxImage('likeCheckbox5')">
+                        <input type="hidden" id="likeCheckboxState5" name="likeCheckboxState5" value="false">
                     </div>
 
 
@@ -62,6 +67,11 @@
                 </div>
 
                 <div class="absolute right-28 top-72">
+
+                    <div class="rounded-xl bg-customWhite text-center border border-customBlack text-xl px-8 py-4">
+                        <p>Как вам образ?</p>
+                    </div>
+
                     <img src="/assets/img/png/janna-skin3.png" alt="">
                 </div>
 
