--- a/templates/skin6.html
+++ b/templates/skin6.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="/css/customStyles.css">
         <title>Document</title>
      </head>
-     <body class="bg-gray-200">
+     <body class="bg-customGray">
         <!-- Main Content -->
         <main class="flex items-center justify-center h-screen">
             <!-- Wrapper for Container and Stripes -->
@@ -17,17 +17,18 @@
                     <img src="/assets/img/svg/logo.svg" alt="">
                 </div>
                 <!-- Card Selection Section -->
-                <div class="bg-white p-8 shadow-md relative">
+                <div class="bg-customWhite p-8 shadow-md relative">
 
                     <div class="flex justify-center items-center">
                         <img src="/assets/img/png/skin6.png" alt="Логотип" class="max-w-full h-auto">
                     </div>
 
-                    <div class="absolute top-32 left-96">
+                    <div class="absolute top-10 right-64">
                         <img src="/assets/img/svg/likeWhite.svg" alt="Like" class="checkbox-image" id="likeCheckbox1" onclick="toggleCheckboxImage('likeCheckbox1')">
+                        <input type="hidden" id="likeCheckboxState1" name="likeCheckboxState1" value="false">
                     </div>
 
-                    <div class="absolute top-10 left-72">
+                    <div class="absolute top-32 left-96">
                         <img src="/assets/img/svg/likeWhite.svg" alt="Like" class="checkbox-image" id="likeCheckbox2" onclick="toggleCheckboxImage('likeCheckbox2')">
                     </div>
 
@@ -61,6 +62,11 @@
                 </div>
 
                 <div class="absolute right-28 top-72">
+
+                    <div class="rounded-xl bg-customWhite text-center border border-customBlack text-xl px-8 py-4">
+                        <p>Как вам образ?</p>
+                    </div>
+
                     <img src="/assets/img/png/janna-skin6.png" alt="">
                 </div>
 
