--- a/templates/skin6man.html
+++ b/templates/skin6man.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="/css/customStyles.css">
         <title>Document</title>
      </head>
-     <body class="bg-gray-200">
+     <body class="bg-customGray">
         <!-- Main Content -->
         <main class="flex items-center justify-center h-screen">
             <!-- Wrapper for Container and Stripes -->
@@ -17,13 +17,13 @@
                     <img src="/assets/img/svg/logo.svg" alt="">
                 </div>
                 <!-- Card Selection Section -->
-                <div class="bg-white p-8 shadow-md relative">
+                <div class="bg-customWhite p-8 shadow-md relative">
 
                     <div class="flex justify-center items-center">
-                        <img src="/assets/img/png/skin2.png" alt="Логотип" class="max-w-full h-auto">
+                        <img src="/assets/img/png/edick6.png" alt="Логотип" class="max-w-full h-auto">
                     </div>
 
-                    <div class="absolute top-10 right-64">
+                    <div class="absolute top-10 right-72">
                         <img src="/assets/img/svg/likeWhite.svg" alt="Like" class="checkbox-image" id="likeCheckbox1" onclick="toggleCheckboxImage('likeCheckbox1')">
                     </div>
 
@@ -39,20 +39,20 @@
                         <img src="/assets/img/svg/likeWhite.svg" alt="Like" class="checkbox-image" id="likeCheckbox4" onclick="toggleCheckboxImage('likeCheckbox4')">
                     </div>
 
-                    <div class="absolute top-64 right-64">
+                    <div class="absolute top-72 right-80">
                         <img src="/assets/img/svg/likeWhite.svg" alt="Like" class="checkbox-image" id="likeCheckbox5" onclick="toggleCheckboxImage('likeCheckbox5')">
                     </div>
 
                     <div class="flex justify-end mt-6">
                         <div class="border-2 border-customBlack rounded-full py-1 px-2 flex items-center">
-                            <button onclick="window.location.href='previousPage.html'">
+                            <button onclick="window.location.href='skin5man.html'">
                                 <img src="/assets/img/png/prev.png" alt="">
                             </button>
                             
                             <!-- Separator -->
                             <div class="w-1 h-8 bg-customBlack mx-2"></div>
                             
-                            <button onclick="window.location.href='confirmStyle.html'">
+                            <button onclick="window.location.href='skin7man.html'">
                                 <img src="/assets/img/png/next.png" alt="">
                             </button>
                         </div>
@@ -61,7 +61,7 @@
                 </div>
 
                 <div class="absolute right-28 top-72">
-                    <img src="/assets/img/png/janna-skin2.png" alt="">
+                    <img src="/assets/img/png/edick-skin6.png" alt="">
                 </div>
 
                 <!-- Green and Black Stripes -->
