--- a/templates/stilistam.html
+++ b/templates/stilistam.html
@@ -10,10 +10,12 @@
    <body class="bg-customGray">
 
     <!-- Header -->
-    <header class="flex items-center justify-between p-3 bg-white shadow-md">
+    <header class="flex items-center justify-between p-3 bg-customWhite shadow-md">
       <!-- Logo -->
       <div class="ml-20">
-        <img src="/assets/img/svg/logoHead.svg" alt="">
+        <a href="index.html">
+          <img src="/assets/img/svg/logoHead.svg" alt="">
+        </a>
       </div>
   
       <!-- Navigation -->
